--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -40,5 +40,11 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
+    - name: Run PHPStan tests
+      run: composer run-script test:phpstan
+
+    - name: Run Code Sniffer tests
+      run: composer run-script test:cs
+
     - name: Run consistency tests
       run: composer run-script test:consistency
