--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -46,5 +46,5 @@ jobs:
     - name: Run Code Sniffer tests
       run: composer run-script test:cs
 
-    - name: Run consistency tests
-      run: composer run-script test:consistency
+    - name: Run integration tests
+      run: composer run-script test:integration
