--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [ '8.4' ]
+        php-versions: [ '8.4', '8.5' ]
 
     runs-on: ubuntu-latest
 
@@ -23,7 +23,6 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
-        extensions: pdo_mysql, pdo_sqlite, pdo_pgsql
 
     - name: Checkout code
       uses: actions/checkout@v3
