--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [ '8.4', '8.5' ]
+        php-versions: [ '8.4' ]
 
     runs-on: ubuntu-latest
 
